--- a/public/index.html
+++ b/public/index.html
@@ -1069,7 +1069,7 @@
 
     document.addEventListener('DOMContentLoaded', () => {
 
-      fetch('http://localhost:5090/get-divflex/', {
+      fetch('https://72.61.35.121:5090/get-divflex/', {
         method: 'GET',
         headers: {
           'Content-Type': 'application/json'
@@ -1087,7 +1087,7 @@
 
 
 
-      fetch('http://localhost:5090/get-prods-divflex/', {
+      fetch('https://72.61.35.121:5090/get-prods-divflex/', {
         method: 'GET',
         headers: {
           'Content-Type': 'application/json'
@@ -1151,7 +1151,7 @@
         })
         .catch(error => console.error('Erro ao obter informações', error))
 
-      fetch('http://localhost:5090/promocoes/', {
+      fetch('https://72.61.35.121:5090/promocoes/', {
         method: 'GET',
         headers: {
           'Content-Type': 'application/json'
