Atualizando o projeto para hospedagem

--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -17,15 +17,15 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -34,7 +34,7 @@
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+  <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
 
   <!-- Main Stylesheet File -->
@@ -47,9 +47,9 @@
 <body>
 
   <!-- WhatsApp Fixo -->
-  <a href="https://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer"
+  <a href="http://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer"
     aria-label="Fale conosco via WhatsApp">
-    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
+    <img src="http://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
   </a>
   <button class="chatbot-fixed" aria-label="Abrir chat de suporte" aria-expanded="false" aria-controls="chatbot-window">
     <i class="fas fa-comments" aria-hidden="true"></i>
@@ -193,7 +193,7 @@
     <div class="redes-texto">
       <h2>Faça já o seu Orçamento.</h2>
       <p>A FM Notebooks resolve com agilidade e confiança.</p>
-      <a href="https://wa.me/553492088233" class="botao-fm" target="_blank">
+      <a href="http://wa.me/553492088233" class="botao-fm" target="_blank">
         Solicitar Orçamento
       </a>
 
@@ -209,7 +209,7 @@
   <!-- =======SIGA NOS=========== -->
 
   <section class="siga-nos-nos">
-    <a href="https://www.instagram.com/fmnotebooks.ofc/" target="_blank" class="siga-nos-link">
+    <a href="http://www.instagram.com/fmnotebooks.ofc/" target="_blank" class="siga-nos-link">
       <i class="fab fa-instagram"></i>
       <h3>SIGA-NOS NO INSTAGRAM</h3>
     </a>
@@ -230,7 +230,7 @@
         </div>
 
         <div class="footer-content-call">
-          <a href="https://wa.me/553492088233" target="_blank">
+          <a href="http://wa.me/553492088233" target="_blank">
             <i class="fa fa-headset"></i>
             Fale Conosco
           </a>
@@ -261,10 +261,10 @@
       <div class="footer-social">
         <h4>Redes Sociais</h4>
         <div class="footer-social-icons">
-            <a href="https://wa.me/553492088233" target="_blank" aria-label="WhatsApp">
+            <a href="http://wa.me/553492088233" target="_blank" aria-label="WhatsApp">
               <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
+            <a href="http://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
               <i class="fab fa-instagram"></i>
             </a>
           </div>
@@ -310,9 +310,9 @@
         <h4>Desenvolvido por</h4>
         <ul>
           <li>Iago Borges Barbosa - <a href="mailto:iagoborgesbarbosa7@gmail.com">iagoborgesbarbosa7@gmail.com</a> -
-              <a href="https://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
+              <a href="http://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
             <li>Caio Gabriel - <a href="mailto:caiogbriiel@gmail.com">caiogbriiel@gmail.com</a> - <a
-                href="https://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
+                href="http://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
         </ul>
       </div>
   </footer>
@@ -386,7 +386,7 @@
     const urlParams = new URLSearchParams(window.location.search);
     const chave = urlParams.get("id");
 
-    fetch("https://72.61.35.121:5090/get-prod?chave=" + chave)
+    fetch("http://72.61.35.121:5090/get-prod?chave=" + chave)
       .then(res => res.json())
       .then(produto => {
      
@@ -544,7 +544,7 @@
 
  
 let numero = "5534992088233"; 
-let link = `https://wa.me/${numero}`;
+let link = `http://wa.me/${numero}`;
 window.open(link, "_blank");
 
 
