--- a/public/index.html
+++ b/public/index.html
@@ -18,15 +18,15 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
   <link rel="stylesheet" href="/css/contatos.css">
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -35,7 +35,7 @@
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+  <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
 
   <!-- Main Stylesheet File -->
@@ -53,9 +53,9 @@
 <body>
 
   <!-- WhatsApp Fixo -->
-  <a href="https://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer"
+  <a href="http://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer"
     aria-label="Fale conosco via WhatsApp">
-    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
+    <img src="http://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
   </a>
 
   <button class="chatbot-fixed" aria-label="Abrir chat de suporte" aria-expanded="false" aria-controls="chatbot-window">
@@ -591,7 +591,7 @@
     <div class="redes-texto">
       <h2>Faça já o seu Orçamento.</h2>
       <p>A FM Notebooks resolve com agilidade e confiança.</p>
-      <a href="https://wa.me/553492088233" class="botao-fm" target="_blank">
+      <a href="http://wa.me/553492088233" class="botao-fm" target="_blank">
         Solicitar Orçamento
       </a>
 
@@ -607,7 +607,7 @@
   <!-- =======SIGA NOS=========== -->
 
   <section class="siga-nos-nos">
-    <a href="https://www.instagram.com/fmnotebooks.ofc/" target="_blank" class="siga-nos-link">
+    <a href="http://www.instagram.com/fmnotebooks.ofc/" target="_blank" class="siga-nos-link">
       <i class="fab fa-instagram"></i>
       <h3>SIGA-NOS NO INSTAGRAM</h3>
     </a>
@@ -620,35 +620,35 @@
   <section class="vitrine">
     <div class="container-vitrine">
 
-      <a href="https://www.instagram.com/p/DMz4-FXRwE9/" target="_blank">
+      <a href="http://www.instagram.com/p/DMz4-FXRwE9/" target="_blank">
         <img src="img/dia-dos-pais.jpg" alt="">
       </a>
 
-      <a href="https://www.instagram.com/p/DIRHGqROeYm/" target="_blank">
+      <a href="http://www.instagram.com/p/DIRHGqROeYm/" target="_blank">
         <img src="img/4-vantagens.jpg" alt="">
       </a>
 
-      <a href="https://www.instagram.com/p/DIRHGqROeYm/" target="_blank">
+      <a href="http://www.instagram.com/p/DIRHGqROeYm/" target="_blank">
         <img src="img/4-vantagens.jpg" alt="">
       </a>
 
-      <a href="https://www.instagram.com/p/DIRHGqROeYm/" target="_blank">
+      <a href="http://www.instagram.com/p/DIRHGqROeYm/" target="_blank">
         <img src="img/4-vantagens.jpg" alt="">
       </a>
 
-      <a href="https://www.instagram.com/p/DHJA6zGOui1/" target="_blank">
+      <a href="http://www.instagram.com/p/DHJA6zGOui1/" target="_blank">
         <img src="img/descontao.jpg" alt="">
       </a>
 
-      <a href="https://www.instagram.com/p/DG2_WAtpTWp/" target="_blank">
+      <a href="http://www.instagram.com/p/DG2_WAtpTWp/" target="_blank">
         <img src="img/seunovofone.jpg" alt="">
       </a>
 
-      <a href="https://www.instagram.com/p/DHBnETruN1E/" target="_blank">
+      <a href="http://www.instagram.com/p/DHBnETruN1E/" target="_blank">
         <img src="img/mouse-semana-do-consumidor.jpg" alt="">
       </a>
 
-      <a href="https://www.instagram.com/p/DHBnETruN1E/" target="_blank">
+      <a href="http://www.instagram.com/p/DHBnETruN1E/" target="_blank">
         <img src="img/mouse-semana-do-consumidor.jpg" alt="">
       </a>
 
@@ -708,7 +708,7 @@
           </div>
 
           <div class="footer-content-call">
-            <a href="https://wa.me/553492088233" target="_blank">
+            <a href="http://wa.me/553492088233" target="_blank">
               <i class="fa fa-headset"></i>
               Fale Conosco
             </a>
@@ -738,10 +738,10 @@
         <div class="footer-social">
           <h4>Redes Sociais</h4>
           <div class="footer-social-icons">
-            <a href="https://wa.me/553492088233" target="_blank" aria-label="WhatsApp">
+            <a href="http://wa.me/553492088233" target="_blank" aria-label="WhatsApp">
               <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
+            <a href="http://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
               <i class="fab fa-instagram"></i>
             </a>
           </div>
@@ -784,9 +784,9 @@
           <h4>Desenvolvido por</h4>
           <ul>
             <li>Iago Borges Barbosa - <a href="mailto:iagoborgesbarbosa7@gmail.com">iagoborgesbarbosa7@gmail.com</a> -
-              <a href="https://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
+              <a href="http://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
             <li>Caio Gabriel - <a href="mailto:caiogbriiel@gmail.com">caiogbriiel@gmail.com</a> - <a
-                href="https://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
+                href="http://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
           </ul>
         </div>
 
@@ -1032,7 +1032,7 @@
 
 
         let numero = "5534992088233";
-        let link = `https://wa.me/${numero}`;
+        let link = `http://wa.me/${numero}`;
         window.open(link, "_blank");
       });
 
@@ -1069,7 +1069,7 @@
 
     document.addEventListener('DOMContentLoaded', () => {
 
-      fetch('https://72.61.35.121:5090/get-divflex/', {
+      fetch('http://72.61.35.121:5090/get-divflex/', {
         method: 'GET',
         headers: {
           'Content-Type': 'application/json'
@@ -1087,7 +1087,7 @@
 
 
 
-      fetch('https://72.61.35.121:5090/get-prods-divflex/', {
+      fetch('http://72.61.35.121:5090/get-prods-divflex/', {
         method: 'GET',
         headers: {
           'Content-Type': 'application/json'
@@ -1151,7 +1151,7 @@
         })
         .catch(error => console.error('Erro ao obter informações', error))
 
-      fetch('https://72.61.35.121:5090/promocoes/', {
+      fetch('http://72.61.35.121:5090/promocoes/', {
         method: 'GET',
         headers: {
           'Content-Type': 'application/json'
