--- a/public/login.html
+++ b/public/login.html
@@ -8,8 +8,8 @@
   <meta name="description" content="FM Notebooks: loja de notebooks, acessórios e assistência técnica especializada em Uberlândia.">
   <meta name="author" content="Caio Gabriel, Iago Borges">
   <!-- Fontes -->
-  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.4/css/boxicons.min.css" />
+  <link href="http://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.4/css/boxicons.min.css" />
 
   <link rel="stylesheet" href="css/login.css" />
   <title>FM-Notebooks ADM</title>
@@ -50,7 +50,7 @@
 
   const msg = { email, senha };
 
-  fetch('https://72.61.35.121:5090/login', {
+  fetch('http://72.61.35.121:5090/login', {
     method: 'POST',
     headers: {
       'Content-Type': 'application/json'
