--- a/public/produtos.html
+++ b/public/produtos.html
@@ -14,14 +14,14 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Base CSS -->
   <link href="css/base-responsive.css" rel="stylesheet">
@@ -37,8 +37,8 @@
   <div class="overlay"></div>
 
   <!-- WhatsApp Fixo -->
-  <a href="https://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco via WhatsApp">
-    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
+  <a href="http://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco via WhatsApp">
+    <img src="http://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
   </a>
   <button class="chatbot-fixed" aria-label="Abrir chat de suporte" aria-expanded="false" aria-controls="chatbot-window">
     <i class="fas fa-comments" aria-hidden="true"></i>
@@ -372,7 +372,7 @@
           </div>
 
           <div class="footer-content-call">
-            <a href="https://wa.me/553492088233" target="_blank">
+            <a href="http://wa.me/553492088233" target="_blank">
               <i class="fa fa-headset"></i>
               Fale Conosco
             </a>
@@ -402,10 +402,10 @@
         <div class="footer-social">
           <h4>Redes Sociais</h4>
           <div class="footer-social-icons">
-            <a href="https://wa.me/553492088233" target="_blank" aria-label="WhatsApp">
+            <a href="http://wa.me/553492088233" target="_blank" aria-label="WhatsApp">
               <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
+            <a href="http://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
               <i class="fab fa-instagram"></i>
             </a>
           </div>
@@ -448,9 +448,9 @@
           <h4>Desenvolvido por</h4>
           <ul>
             <li>Iago Borges Barbosa - <a href="mailto:iagoborgesbarbosa7@gmail.com">iagoborgesbarbosa7@gmail.com</a> -
-              <a href="https://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
+              <a href="http://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
             <li>Caio Gabriel - <a href="mailto:caiogbriiel@gmail.com">caiogbriiel@gmail.com</a> - <a
-                href="https://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
+                href="http://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
           </ul>
         </div>
       </div>
