--- a/public/servicos.html
+++ b/public/servicos.html
@@ -16,22 +16,22 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
   <link href="css/servicos.css" rel="stylesheet">
@@ -44,8 +44,8 @@
 <body>
 
   <!-- WhatsApp Fixo -->
-  <a href="https://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco via WhatsApp">
-    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
+  <a href="http://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco via WhatsApp">
+    <img src="http://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
   </a>
   <button class="chatbot-fixed" aria-label="Abrir chat de suporte" aria-expanded="false" aria-controls="chatbot-window">
     <i class="fas fa-comments" aria-hidden="true"></i>
@@ -163,7 +163,7 @@
                 <span class="valor">R$ 300</span>
               </div>
             </div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
           </div>
 
           <div class="servico-card">
@@ -182,7 +182,7 @@
                 <span class="valor">R$ 130</span>
               </div>
             </div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
           </div>
 
           <div class="servico-card">
@@ -201,7 +201,7 @@
                 <span class="valor">R$ 100</span>
               </div>
             </div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
           </div>
 
           <div class="servico-card">
@@ -220,7 +220,7 @@
                 <span class="valor">R$ 130</span>
               </div>
             </div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
           </div>
 
           <!-- Adicionando 2 novos cards de serviços especializados -->
@@ -244,7 +244,7 @@
                 <span class="valor">R$ 120</span>
               </div>
             </div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
           </div>
 
           <div class="servico-card">
@@ -267,7 +267,7 @@
                 <span class="valor">R$ 50</span>
               </div>
             </div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar Orçamento</a>
           </div>
 
         </div>
@@ -289,7 +289,7 @@
               </div>
             </div>
             <div class="servico-preco">R$ 50</div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
           </div>
 
           <div class="servico-item">
@@ -301,7 +301,7 @@
               </div>
             </div>
             <div class="servico-preco">R$ 250</div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
           </div>
 
           <div class="servico-item">
@@ -313,7 +313,7 @@
               </div>
             </div>
             <div class="servico-preco">R$ 180</div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
           </div>
 
           <div class="servico-item">
@@ -325,7 +325,7 @@
               </div>
             </div>
             <div class="servico-preco">R$ 50</div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
           </div>
 
           <div class="servico-item">
@@ -337,7 +337,7 @@
               </div>
             </div>
             <div class="servico-preco">R$ 150</div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
           </div>
 
           <div class="servico-item">
@@ -349,7 +349,7 @@
               </div>
             </div>
             <div class="servico-preco">R$ 200</div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
           </div>
 
           <div class="servico-item">
@@ -361,7 +361,7 @@
               </div>
             </div>
             <div class="servico-preco">R$ 280</div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
           </div>
 
           <div class="servico-item">
@@ -373,7 +373,7 @@
               </div>
             </div>
             <div class="servico-preco">R$ 250</div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
           </div>
 
           <div class="servico-item">
@@ -385,7 +385,7 @@
               </div>
             </div>
             <div class="servico-preco">R$ 100</div>
-            <a href="https://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
+            <a href="http://wa.me/553492088233" class="btn-servico" target="_blank">Solicitar</a>
           </div>
 
         </div>
@@ -418,7 +418,7 @@
       <div class="redes-texto">
         <h2>Precisa de Assistência Técnica?</h2>
         <p>Entre em contato conosco e faça seu orçamento sem compromisso.</p>
-        <a href="https://wa.me/553492088233" class="botao-fm" target="_blank">
+        <a href="http://wa.me/553492088233" class="botao-fm" target="_blank">
           Solicitar Orçamento
         </a>
       </div>
@@ -439,7 +439,7 @@
           </div>
 
           <div class="footer-content-call">
-            <a href="https://wa.me/553492088233" target="_blank">
+            <a href="http://wa.me/553492088233" target="_blank">
               <i class="fa fa-headset"></i>
               Fale Conosco
             </a>
@@ -470,13 +470,13 @@
         <div class="footer-social">
           <h4>Redes Sociais</h4>
           <div class="footer-social-icons">
-            <a href="https://wa.me/553492088233" target="_blank" aria-label="Facebook">
+            <a href="http://wa.me/553492088233" target="_blank" aria-label="Facebook">
               <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
+            <a href="http://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
               <i class="fab fa-instagram"></i>
             </a>
-            <!-- <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn">
+            <!-- <a href="http://linkedin.com" target="_blank" aria-label="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
           </a> -->
           </div>
@@ -522,9 +522,9 @@
           <h4>Desenvolvido por</h4>
           <ul>
            <li>Iago Borges Barbosa - <a href="mailto:iagoborgesbarbosa7@gmail.com">iagoborgesbarbosa7@gmail.com</a> -
-              <a href="https://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
+              <a href="http://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
             <li>Caio Gabriel - <a href="mailto:caiogbriiel@gmail.com">caiogbriiel@gmail.com</a> - <a
-                href="https://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
+                href="http://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
           </ul>
         </div>
     </footer>
@@ -763,7 +763,7 @@ function finalizarCompra() {
 
      
       let numero = "5534992088233"; 
-      let link = `https://wa.me/${numero}`;
+      let link = `http://wa.me/${numero}`;
       window.open(link, "_blank");
     });
 
