--- a/public/sobre.html
+++ b/public/sobre.html
@@ -16,12 +16,12 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -30,7 +30,7 @@
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+  <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
 
   <!-- Main Stylesheet File -->
@@ -42,9 +42,9 @@
 <body>
 
   <!-- WhatsApp Fixo -->
-  <a href="https://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer"
+  <a href="http://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer"
     aria-label="Fale conosco via WhatsApp">
-    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
+    <img src="http://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
   </a>
 
   <div class="click-closed"></div>
@@ -170,7 +170,7 @@
       <div class="redes-texto">
         <h2>Faça já o seu Orçamento.</h2>
         <p>A FM Notebooks resolve com agilidade e confiança.</p>
-        <a href="https://wa.me/553492088233" class="botao-fm" target="_blank" rel="noopener noreferrer">
+        <a href="http://wa.me/553492088233" class="botao-fm" target="_blank" rel="noopener noreferrer">
           Solicitar Orçamento
         </a>
       </div>
@@ -193,7 +193,7 @@
           </div>
 
           <div class="footer-content-call">
-            <a href="https://wa.me/553492088233" target="_blank">
+            <a href="http://wa.me/553492088233" target="_blank">
               <i class="fa fa-headset"></i>
               Fale Conosco
             </a>
@@ -224,13 +224,13 @@
         <div class="footer-social">
           <h4>Redes Sociais</h4>
           <div class="footer-social-icons">
-            <a href="https://wa.me/553492088233" target="_blank" aria-label="Facebook">
+            <a href="http://wa.me/553492088233" target="_blank" aria-label="Facebook">
               <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
+            <a href="http://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
               <i class="fab fa-instagram"></i>
             </a>
-            <!-- <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn">
+            <!-- <a href="http://linkedin.com" target="_blank" aria-label="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
           </a> -->
           </div>
@@ -276,9 +276,9 @@
           <h4>Desenvolvido por</h4>
           <ul>
             <li>Iago Borges Barbosa - <a href="mailto:iagoborgesbarbosa7@gmail.com">iagoborgesbarbosa7@gmail.com</a> -
-              <a href="https://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
+              <a href="http://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
             <li>Caio Gabriel - <a href="mailto:caiogbriiel@gmail.com">caiogbriiel@gmail.com</a> - <a
-                href="https://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
+                href="http://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
           </ul>
         </div>
     </footer>
@@ -520,7 +520,7 @@
 
      
       let numero = "5534992088233"; 
-      let link = `https://wa.me/${numero}`;
+      let link = `http://wa.me/${numero}`;
       window.open(link, "_blank");
     });
 
