Atualizando rotas do css

--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -38,9 +38,9 @@
     rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/detalhes.css" rel="stylesheet">
-  <link href="css/carrinho.css" rel="stylesheet">
-  <link href="css/chatbot.css" rel="stylesheet">
+  <link href="./css/detalhes.css" rel="stylesheet">
+  <link href="./css/carrinho.css" rel="stylesheet">
+  <link href="./css/chatbot.css" rel="stylesheet">
 
 </head>
 
