--- a/public/servicos.html
+++ b/public/servicos.html
@@ -34,9 +34,9 @@
   <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/servicos.css" rel="stylesheet">
-  <link href="css/chatbot.css" rel="stylesheet">
-  <link href="css/carrinho.css" rel="stylesheet">
+  <link href="./css/servicos.css" rel="stylesheet">
+  <link href="./css/chatbot.css" rel="stylesheet">
+  <link href="./css/carrinho.css" rel="stylesheet">
 
 
 </head>
