--- a/public/adm.html
+++ b/public/adm.html
@@ -10,7 +10,7 @@
   <meta name="description" content="FM Notebooks: loja de notebooks, acessórios e assistência técnica especializada em Uberlândia.">
   <meta name="author" content="Caio Gabriel, Iago Borges">
   
-  <link rel="stylesheet" href="css/adm.css">
+  <link rel="stylesheet" href="/css/adm.css">
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
