--- a/public/contatos.html
+++ b/public/contatos.html
@@ -16,12 +16,12 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -30,22 +30,22 @@
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/contatos.css" rel="stylesheet">
-  <link href="css/chatbot.css" rel="stylesheet">
-  <link href="css/carrinho.css" rel="stylesheet">
+  <link href="./css/contatos.css" rel="stylesheet">
+  <link href="./css/chatbot.css" rel="stylesheet">
+  <link href="./css/carrinho.css" rel="stylesheet">
 
 </head>
 
 <body>
 
   <!-- WhatsApp Fixo -->
-  <a href="http://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer"
+  <a href="https://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer"
     aria-label="Fale conosco via WhatsApp">
-    <img src="http://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
+    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
   </a>
   <button class="chatbot-fixed" aria-label="Abrir chat de suporte" aria-expanded="false" aria-controls="chatbot-window">
     <i class="fas fa-comments" aria-hidden="true"></i>
@@ -151,7 +151,7 @@
       <div class="mapa">
         <div class="map">
           <iframe
-            src="http://www.google.com/maps/embed?pb=!3m2!1spt-BR!2sbr!4v1749729234662!5m2!1spt-BR!2sbr!6m8!1m7!1shKSIKzhn_0qBA63ChH23vQ!2m2!1d-18.93806301846007!2d-48.3021036730952!3f327.63302618749407!4f-2.067958540924394!5f0.7820865974627469"
+            src="https://www.google.com/maps/embed?pb=!3m2!1spt-BR!2sbr!4v1749729234662!5m2!1spt-BR!2sbr!6m8!1m7!1shKSIKzhn_0qBA63ChH23vQ!2m2!1d-18.93806301846007!2d-48.3021036730952!3f327.63302618749407!4f-2.067958540924394!5f0.7820865974627469"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
@@ -166,7 +166,7 @@
       <div class="redes-texto">
         <h2>Faça já o seu Orçamento.</h2>
         <p>A FM Notebooks resolve com agilidade e confiança.</p>
-        <a href="http://wa.me/553492088233" class="botao-fm" target="_blank">
+        <a href="https://wa.me/553492088233" class="botao-fm" target="_blank">
           Solicitar Orçamento
         </a>
 
@@ -248,7 +248,7 @@
           </div>
 
           <div class="footer-content-call">
-            <a href="http://wa.me/553492088233" target="_blank">
+            <a href="https://wa.me/553492088233" target="_blank">
               <i class="fa fa-headset"></i>
               Fale Conosco
             </a>
@@ -279,10 +279,10 @@
         <div class="footer-social">
           <h4>Redes Sociais</h4>
           <div class="footer-social-icons">
-            <a href="http://wa.me/553492088233" target="_blank" aria-label="WhatsApp">
+            <a href="https://wa.me/553492088233" target="_blank" aria-label="WhatsApp">
               <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="http://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
+            <a href="https://www.instagram.com/fmnotebooks.ofc/" target="_blank" aria-label="Instagram">
               <i class="fab fa-instagram"></i>
             </a>
           </div>
@@ -328,9 +328,9 @@
           <h4>Desenvolvido por</h4>
           <ul>
             <li>Iago Borges Barbosa - <a href="mailto:iagoborgesbarbosa7@gmail.com">iagoborgesbarbosa7@gmail.com</a> -
-              <a href="http://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
+              <a href="https://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
             <li>Caio Gabriel - <a href="mailto:caiogbriiel@gmail.com">caiogbriiel@gmail.com</a> - <a
-                href="http://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
+                href="https://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
           </ul>
         </div>
     </footer>
@@ -572,7 +572,7 @@
 
      
       let numero = "5534992088233"; 
-      let link = `http://wa.me/${numero}`;
+      let link = `https://wa.me/${numero}`;
       window.open(link, "_blank");
     });
 
