--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <!-- Favicons -->
   <link href="img/Captura_de_tela_2025-04-10_181325-removebg-preview.png" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-  <link rel="stylesheet" href="/css/contatos.css">
+  <link rel="stylesheet" href="./css/contatos.css">
   <!-- Google Fonts -->
   <link href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
@@ -39,12 +39,12 @@
     rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/index.css" rel="stylesheet">
-  <link href="css/chatbot.css" rel="stylesheet">
-  <link href="css/carrinho.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
+  <link href="./css/chatbot.css" rel="stylesheet">
+  <link href="./css/carrinho.css" rel="stylesheet">
 
   <!-- ==================CARRINHO====================== -->
-  <link rel="stylesheet" href="css/carrinho.css">
+  <link rel="stylesheet" href="./css/carrinho.css">
   <script src="js/carrinho.js" defer></script>
 
 
