--- a/public/produtos.html
+++ b/public/produtos.html
@@ -24,12 +24,12 @@
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Base CSS -->
-  <link href="css/base-responsive.css" rel="stylesheet">
-  <link href="css/index.css" rel="stylesheet">
+  <link href="./css/base-responsive.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
   
   <!-- CSS específico da página -->
-  <link href="css/produtos.css" rel="stylesheet">
-  <link href="css/chatbot.css" rel="stylesheet">
+  <link href="./css/produtos.css" rel="stylesheet">
+  <link href="./css/chatbot.css" rel="stylesheet">
 </head>
 
 <body>
