--- a/public/sobre.html
+++ b/public/sobre.html
@@ -34,8 +34,8 @@
     rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/sobre.css" rel="stylesheet">
-  <link href="css/carrinho.css" rel="stylesheet">
+  <link href="./css/sobre.css" rel="stylesheet">
+  <link href="./css/carrinho.css" rel="stylesheet">
 
 </head>
 
