Melhorando rotas para debug

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
   <title>FM Notebooks - OFICIAL</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="keywords" content="notebooks, acessórios, assistência técnica, Uberlândia, FM Notebooks">
-  <meta name="description"
-    content="FM Notebooks: loja de notebooks, acessórios e assistência técnica especializada em Uberlândia.">
+  <meta name="description" content="FM Notebooks: loja de notebooks, acessórios e assistência técnica especializada em Uberlândia.">
   <meta name="author" content="Caio Gabriel, Iago Borges">
 
 
@@ -26,17 +25,14 @@
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
   <link href="./css/index.css" rel="stylesheet">
@@ -53,8 +49,7 @@
 <body>
 
   <!-- WhatsApp Fixo -->
-  <a href="http://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer"
-    aria-label="Fale conosco via WhatsApp">
+  <a href="http://wa.me/553492088233" class="whats-fixed" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco via WhatsApp">
     <img src="http://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp" width="32" height="32">
   </a>
 
@@ -130,8 +125,7 @@
         <li role="none"><a href="/loja" role="menuitem">Loja</a></li>
         <li role="none"><a href="/servicos" role="menuitem">Serviços</a></li>
         <li role="none"><a href="/contatos" role="menuitem">Contatos</a></li>
-        <li role="none" class="nav-cart"><a href="#" class="nav-cart" role="menuitem"
-            aria-label="Carrinho de compras"><i class="fas fa-shopping-cart" aria-hidden="true"></i></a></li>
+        <li role="none" class="nav-cart"><a href="#" class="nav-cart" role="menuitem" aria-label="Carrinho de compras"><i class="fas fa-shopping-cart" aria-hidden="true"></i></a></li>
       </ul>
     </nav>
   </header>
@@ -391,15 +385,13 @@
 
     <a href="produtos.html" class="animated-button">
       <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+        <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
         </path>
       </svg>
       <span class="text">Mais Produtos</span>
       <span class="circle"></span>
       <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+        <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
         </path>
       </svg>
     </a>
@@ -420,15 +412,13 @@
 
     <a href="produtos.html" class="animated-button">
       <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+        <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
         </path>
       </svg>
       <span class="text">Mais Promoções</span>
       <span class="circle"></span>
       <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+        <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
         </path>
       </svg>
     </a>
@@ -537,9 +527,7 @@
       <div class="cat">
         <div class="categoria">
           <a href="loja?categoria=pendrives">
-            <img
-              src="img/pendrive_sandisk_128gb_sdcz50_128g_b35_16293_2_3ce6e771fef3e193dbf21544c76da8f7-removebg-preview.png"
-              alt="">
+            <img src="img/pendrive_sandisk_128gb_sdcz50_128g_b35_16293_2_3ce6e771fef3e193dbf21544c76da8f7-removebg-preview.png" alt="">
           </a>
         </div>
         <p>Pendrives</p>
@@ -567,15 +555,13 @@
 
     <a href="produtos.html" class="animated-button">
       <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+        <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
         </path>
       </svg>
       <span class="text">Ver Todos</span>
       <span class="circle"></span>
       <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+        <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
         </path>
       </svg>
     </a>
@@ -784,9 +770,9 @@
           <h4>Desenvolvido por</h4>
           <ul>
             <li>Iago Borges Barbosa - <a href="mailto:iagoborgesbarbosa7@gmail.com">iagoborgesbarbosa7@gmail.com</a> -
-              <a href="http://wa.me/5534991667329" target="_blank">WhatsApp</a></li>
-            <li>Caio Gabriel - <a href="mailto:caiogbriiel@gmail.com">caiogbriiel@gmail.com</a> - <a
-                href="http://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
+              <a href="http://wa.me/5534991667329" target="_blank">WhatsApp</a>
+            </li>
+            <li>Caio Gabriel - <a href="mailto:caiogbriiel@gmail.com">caiogbriiel@gmail.com</a> - <a href="http://wa.me/5534998723042" target="_blank">WhatsApp</a></li>
           </ul>
         </div>
 
@@ -902,6 +888,8 @@
 
 
   <script>
+    const isLocal = location.hostname === "localhost" || location.hostname == "72.61.35.121";
+    const API_URL = isLocal ? "http://localhost:80" : "http://72.61.35.121:80";
 
     // ============ LocalStorage helpers ============
     function getCarrinho() {
@@ -1069,12 +1057,12 @@
 
     document.addEventListener('DOMContentLoaded', () => {
 
-      fetch('http://72.61.35.121:80/get-divflex/', {
-        method: 'GET',
-        headers: {
-          'Content-Type': 'application/json'
-        }
-      })
+      fetch(API_URL+'/get-divflex/', {
+          method: 'GET',
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        })
         .then(response => {
           if (!response.ok) throw new Error('Erro ao obter informações')
           return response.json()
@@ -1087,12 +1075,12 @@
 
 
 
-      fetch('http://72.61.35.121:80/get-prods-divflex/', {
-        method: 'GET',
-        headers: {
-          'Content-Type': 'application/json'
-        }
-      })
+      fetch(API_URL+'/get-prods-divflex/', {
+          method: 'GET',
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        })
         .then(response => {
           if (!response.ok) throw new Error('Erro ao obter informações')
           return response.json()
@@ -1151,12 +1139,12 @@
         })
         .catch(error => console.error('Erro ao obter informações', error))
 
-      fetch('http://72.61.35.121:80/promocoes/', {
-        method: 'GET',
-        headers: {
-          'Content-Type': 'application/json'
-        }
-      })
+      fetch(API_URL+'/promocoes/', {
+          method: 'GET',
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        })
         .then(response => {
           if (!response.ok) throw new Error('Erro ao obter informações')
           return response.json()
@@ -1283,7 +1271,7 @@
       document.getElementById("modal-pagamento").style.display = "none";
     }
 
-    window.onclick = function (event) {
+    window.onclick = function(event) {
       const modal = document.getElementById("modal-pagamento");
       if (event.target === modal) {
         modal.style.display = "none";
