--- a/public/servicos.html
+++ b/public/servicos.html
@@ -558,7 +558,7 @@
 
     <script>
       const isLocal = location.hostname === "localhost" || location.hostname == "72.61.35.121";
-      const API_URL = isLocal ? "http://localhost:80" : "http://72.61.35.121:80";
+      const API_URL = isLocal ? "http://72.61.35.121:80":"http://localhost:80";
 
       let totalEl = document.querySelector(".cart-total .total-info span");
       const carrinhoButtons = document.querySelectorAll('.abrir-carrinho');
