--- a/public/adm.html
+++ b/public/adm.html
@@ -590,7 +590,7 @@
 
   <script>
     const isLocal = location.hostname === "localhost" || location.hostname == "72.61.35.121";
-    const API_URL = isLocal ? "http://localhost:80" : "http://72.61.35.121:80";
+    const API_URL = isLocal ? "http://72.61.35.121:80":"http://localhost:80";
 
     function togglePassword(inputId) {
       const input = document.getElementById(inputId);
