--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -354,7 +354,7 @@
 
   <script>
     const isLocal = location.hostname === "localhost" || location.hostname == "72.61.35.121";
-    const API_URL = isLocal ? "http://localhost:80" : "http://72.61.35.121:80";
+    const API_URL = isLocal ? "http://72.61.35.121:80":"http://localhost:80";
 
     function adicionarAoCarrinho(produto) {
       console.log('aoba');
