--- a/public/login.html
+++ b/public/login.html
@@ -42,10 +42,16 @@
   </div>
 
   <script>
-    const isLocal = location.hostname == "72.61.35.121"||location.hostname === "localhost";
-    const API_URL = isLocal ? "http://72.61.35.121:80":"http://localhost:80";
+   
+    let API_URL;
 
-    console.log(isLocal);
+    if(location.hostname=="localhost"){
+      API_URL="http://localhost:80"
+    }else{
+      API_URL="http://72.61.35.121:80"
+    }
+
+    console.log(location.hostname);
     console.log(API_URL);
 
     function fazerLogin(event) {
