--- a/public/adm.html
+++ b/public/adm.html
@@ -589,8 +589,13 @@
 
 
   <script>
-    const isLocal = location.hostname === "localhost" || location.hostname == "72.61.35.121";
-    const API_URL = isLocal ? "http://72.61.35.121:80":"http://localhost:80";
+    let API_URL;
+
+    if (location.hostname == "localhost") {
+      API_URL = "http://localhost:80"
+    } else {
+      API_URL = "http://72.61.35.121:80"
+    }
 
     function togglePassword(inputId) {
       const input = document.getElementById(inputId);
@@ -744,7 +749,7 @@
       const chave = e.currentTarget.getAttribute('name')
 
 
-      fetch(API_URL+'/get-infos-promo/' + chave, {
+      fetch(API_URL + '/get-infos-promo/' + chave, {
           method: 'GET',
           headers: {
             'Content-Type': 'application/json'
@@ -784,7 +789,7 @@
       document.getElementById('produto-janela').style.display = 'block';
 
 
-      fetch(API_URL+'/get-infos/' + chave, {
+      fetch(API_URL + '/get-infos/' + chave, {
           method: 'GET',
           headers: {
             'Content-Type': 'application/json'
@@ -881,7 +886,7 @@
     }
 
     function excluirAdministrador(id) {
-      fetch(API_URL+'/delete-adm/' + id, {
+      fetch(API_URL + '/delete-adm/' + id, {
           method: 'DELETE',
           headers: {
             'Content-Type': 'application/json'
@@ -908,7 +913,7 @@
       const inputBusca = document.getElementById('inputS')
       const divVinculoEnglob = document.getElementById('divVinculo')
 
-      fetch(API_URL+'/adms', {
+      fetch(API_URL + '/adms', {
           method: 'GET',
           headers: {
             'Content-Type': 'application/json'
@@ -970,7 +975,7 @@
         })
         .catch(error => console.error('Erro ao obter informações', error))
 
-      fetch(API_URL+'/get-divflex', {
+      fetch(API_URL + '/get-divflex', {
           method: 'GET'
         })
         .then(response => {
@@ -983,7 +988,7 @@
         })
         .catch(error => console.error('Fetch error (produtos):', error))
 
-      fetch(API_URL+'/produtos', {
+      fetch(API_URL + '/produtos', {
           method: 'GET',
           headers: {
             'Content-Type': 'application/json'
@@ -1008,7 +1013,7 @@
 
 
 
-      fetch(API_URL+'/promocoes', {
+      fetch(API_URL + '/promocoes', {
           method: 'GET',
           headers: {
             'Content-Type': 'application/json'
@@ -1278,7 +1283,7 @@
         idPromo: idPromo,
         array: produtosAlteradosModal
       }
-      fetch(API_URL+'/vinc-promo/', {
+      fetch(API_URL + '/vinc-promo/', {
           method: 'PUT',
           headers: {
             'Content-Type': 'application/json'
@@ -1388,7 +1393,7 @@
       formData.append('chaveAcessProd', chaveAcessProd)
       formData.append('especicficacoesTecnicas', JSON.stringify(especificacoesTecnicas))
 
-      fetch(API_URL+'/add-prod', {
+      fetch(API_URL + '/add-prod', {
           method: 'POST',
           body: formData
         })
@@ -1426,7 +1431,7 @@
       }
 
 
-      fetch(API_URL+'/atualizar-prod/' + chave, {
+      fetch(API_URL + '/atualizar-prod/' + chave, {
           method: 'PUT',
           body: JSON.stringify(infosAtualizadas),
           headers: {
@@ -1466,7 +1471,7 @@
       formData.append('nomePromocao', nomePromo)
 
 
-      fetch(API_URL+'/add-promo', {
+      fetch(API_URL + '/add-promo', {
           method: 'POST',
           body: formData
         })
@@ -1487,7 +1492,7 @@
       const chave = e.currentTarget.getAttribute('name')
 
 
-      fetch(API_URL+'/delete-prod/' + chave, {
+      fetch(API_URL + '/delete-prod/' + chave, {
           method: 'DELETE',
           headers: {
             'Content-Type': 'application/json'
@@ -1515,7 +1520,7 @@
 
       formData.append('imagem', img)
 
-      fetch(API_URL+'/atualizar-promo/' + chave, {
+      fetch(API_URL + '/atualizar-promo/' + chave, {
           method: 'PUT',
           body: formData
         })
@@ -1559,7 +1564,7 @@
       }
 
 
-      fetch(API_URL+'/atualizar-prod/' + chave, {
+      fetch(API_URL + '/atualizar-prod/' + chave, {
           method: 'PUT',
           body: JSON.stringify(infosAtualizadas),
           headers: {
@@ -1585,7 +1590,7 @@
       const chave = e.currentTarget.getAttribute('name')
 
 
-      fetch(API_URL+'/delete-promo/' + chave, {
+      fetch(API_URL + '/delete-promo/' + chave, {
           method: 'DELETE',
         })
         .then(response => {
@@ -1779,7 +1784,7 @@
       // Aqui você faria a requisição para o backend
 
 
-      fetch(API_URL+'/atualizar-divflex/' + novoNome, {
+      fetch(API_URL + '/atualizar-divflex/' + novoNome, {
           method: 'PUT',
           headers: {
             'Content-Type': 'application/json'
@@ -1883,7 +1888,7 @@
 
         // Aqui você faria a requisição para o backend
         // fetch('/api/produtos/vincular', { method: 'POST', body: JSON.stringify({id}) })
-        fetch(API_URL+'/vincular-divflex/' + id, {
+        fetch(API_URL + '/vincular-divflex/' + id, {
             method: 'PUT',
             headers: {
               'Content-Type': 'application/json'
@@ -1919,7 +1924,7 @@
         // Re-renderizar
         renderizarProdutosFlexivel(produtosFiltradosFlex)
 
-        fetch(API_URL+'/desvincular-divflex/' + id, {
+        fetch(API_URL + '/desvincular-divflex/' + id, {
             method: 'PUT',
             headers: {
               'Content-Type': 'application/json'
@@ -1954,7 +1959,7 @@
         telefoneAdm: telefone
       }
 
-      fetch(API_URL+'/add-adm', {
+      fetch(API_URL + '/add-adm', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
