--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -248,6 +248,7 @@
         <ul>
           <li><i class="fas fa-map-marker-alt"></i> Av. Oscar Gomes Moreira Júnior - Tubalina, Uberlândia</li>
           <li><i class="fas fa-phone-alt"></i> (34) 99208-8233</li>
+          <li><i class="fas fa-phone-alt"></i> (34) 3229-7228</li>
           <li><i class="fas fa-envelope"></i> <a href="mailto:fmnotebooks@hotmail.com">fmnotebooks@hotmail.com</a></li>
         </ul>
       </div>
